--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,34 +1,47 @@
 workflows:
-  my-workflow:
-    name: My workflow name
-    instance_type: mac_mini
-    max_build_duration: 60
+  ios-workflow:
+    name: ios_workflow
     environment:
       vars:
-        PUBLIC_ENV_VAR: 'value here'
-      flutter: stable
+        XCODE_WORKSPACE: 'YOUR_WORKSPACE_NAME.xcworkspace' # PUT YOUR WORKSPACE NAME HERE
+        XCODE_SCHEME: 'YOUR_SCHEME_NAME' # PUT THE NAME OF YOUR SCHEME HERE
+        FCI_CERTIFICATE: Encrypted(...) # PUT THE ENCRYPTED DISTRIBUTION CERTIFICATE HERE
+        FCI_CERTIFICATE_PASSWORD: Encrypted(...) # PUT THE ENCRYPTED CERTIFICATE PASSWORD HERE
+        FCI_PROVISIONING_PROFILE: Encrypted(...) # PUT THE ENCRYPTED PROVISIONING PROFILE HERE
       xcode: latest
-    cache:
-      cache_paths:
-        - ~/.pub-cache
+      cocoapods: default
     triggering:
       events:
         - push
       branch_patterns:
-        - pattern: '*'
+        - pattern: master
           include: true
           source: true
-      cancel_previous_builds: false
-    scripts: - xcodebuild build -workspace "MyXcodeWorkspace.xcworkspace" \
-    -scheme "MyScheme" \
-    CODE_SIGN_INDENTITY="" \
-    CODE_SIGNING_REQUIRED=NO \
-    CODE_SIGNING_ALLOWED=NO
+    scripts:
+      - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
+        script: keychain initialize
+      - name: Set up Provisioning profiles from environment variables
+        script: |
+          PROFILES_HOME="$HOME/Library/MobileDevice/Provisioning Profiles"
+          mkdir -p "$PROFILES_HOME"
+          PROFILE_PATH="$(mktemp "$PROFILES_HOME"/$(uuidgen).mobileprovision)"
+          echo ${FCI_PROVISIONING_PROFILE} | base64 --decode > $PROFILE_PATH
+          echo "Saved provisioning profile $PROFILE_PATH"
+      - name: Set up signing certificate
+        script: |
+          echo $FCI_CERTIFICATE | base64 --decode > /tmp/certificate.p12
+          keychain add-certificates --certificate /tmp/certificate.p12 --certificate-password $FCI_CERTIFICATE_PASSWORD
+      - name: Increment build number
+        script: agvtool new-version -all $(($BUILD_NUMBER +1))
+      - name: Set up code signing settings on Xcode project
+        script: xcode-project use-profiles
+      - name: Build ipa for distribution
+        script: xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
     artifacts:
-      - build/**/outputs/**/*.aab
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
-      email:
-        recipients:
-          - name@example.com
-      scripts:
-        - echo 'Post-publish script'
+      app_store_connect:
+        apple_id: your_apple_id@example.com # PUT YOUR APPLE ID HERE
+        password: Encrypted(...) # PUT YOUR APP-SPECIFIC-PASSWORD HERE https://support.apple.com/en-us/HT204397
